collapse fixed

--- a/css/panels.css
+++ b/css/panels.css
@@ -55,6 +55,10 @@ html, body {
     border-style: none;
 }
 
+.inner-heading{
+	cursor: pointer;
+}
+
 .panel-body > img{
 	max-width: 100%;
   /*max-height: 250px;*/
@@ -100,7 +104,7 @@ html, body {
     border-width: 0;
 }
 
-#accordion1 .panel-heading {
+#accordion1+.inner .panel-heading {
     display: block;
     cursor: pointer;
 }
